--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-fileupload": "^0.3.0",
-    "mysql": "^2.15.0",
+    "mysql": "^2.15.0" 
   },
   "engine": {
     "node": "*",
